I have saved faunadb secret key in .env file.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "0BSD",
   "dependencies": {
     "@apollo/client": "^3.3.6",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-query-params": "^1.2.1",
     "react": "^16.13.1",
